<resources>
    <!-- String resources (non translatable) -->
    <string name="AppName">FireStarter</string>

    <!-- To be translated -->
    <string name="AmazonHome">FireTV Home</string>
    <string name="MoveAppAndClickToDrop">Now move app and click again to drop \n(Press RETURN to CANCEL)</string>
    <string name="MoveAppAndClickToDropWhenStartedByMenu">Now move app and click to drop \n(Press RETURN to CANCEL)</string>
    <string name="loading">loading</string>
    <string name="background_observation">Background Observation</string>
    <string name="enable_background_observation_desc">Enable background observation of home-button and startup-event.</string>
    <string name="enable_background_observation_title">Enable background observation.</string>
    <string name="iptitle">IP Address</string>
    <string name="hostnametitle">Hostname</string>
    <string name="notfound">not found..</string>
    <string name="firestarterversiontitle">FireStarter Version</string>
    <string name="startup_app_desc">App that is started on FireTV startup</string>
    <string name="startup_app_title">Startup Application</string>
    <string name="singleclick_app_desc">App that is started on home button single click.</string>
    <string name="singleclick_app_title">Home Button Single Click Application</string>
    <string name="doubleclick_app_desc">App that is started on home button double click.</string>
    <string name="doubleclick_app_title">Home Button Double Click Application</string>
    <string name="showsysapps_desc">Show also system apps in app list.</string>
    <string name="showsysapps_title">Show system apps</string>
    <string name="hiddenapps_desc">Apps that shall not be shown in apps list.</string>
    <string name="hiddenapps_title">Hidden Apps</string>
    <string name="applist_settings">App Listing Settings</string>
    <string name="settings_timings">Observer Timings</string>
    <string name="doubleclick_interval_desc">Define the time in milliseconds (between 100 - 1000) to wait for the second click</string>
    <string name="doubleclick_interval_title">Double click interval</string>
    <string name="is_invalid_number">is invalid for this setting!</string>
    <string name="update_currentversion">Current FireStarter Version</string>
    <string name="update_currentversion_kodi">Current Kodi Version</string>
    <string name="install">Install</string>
    <string name="serverVersion">Latest FireStarter Version</string>
    <string name="serverVersion_kodi">Latest Kodi Version</string>
    <string name="update_checkfor">Check for Update</string>
    <string name="update">Update to latest Version</string>
    <string name="update_hitcheckfor">Hit check for update to check for latest version.</string>
    <string name="autoselectfirsticon_desc">Auto select the first icon when switching to the app drawer (All Apps).</string>
    <string name="autoselectfirsricon_title">Auto select first icon (App Drawer)</string>
    <string name="about_firestarter">FireStarter is a Non-Root Launcher Replacement / App-Drawer for Amazon FireTV:\n\nVisit discussion on XDA-Developers:\nhttp://forum.xda-developers.com/fire-tv/themes-apps/app-root-home-launcher-replacement-app-t3118135\n\nFireStarter is Open-Source, visit project on GitHub:\nhttps://github.com/sphinx02/FireStarter</string>
    <string name="jumpbackwatchdogtime_desc">The time window in milliseconds (between 0 - 10000) in which FireStarter prevents the amazon home launcher from coming to foreground when click-actions have been performed. Set to 0 to disable.</string>
    <string name="jumpbackwatchdogtime_title">Jump Back Watchdog Time</string>
    <string name="AmazonSettings">FireTV Settings</string>
    <string name="leftbar_allapps">Apps</string>
    <string name="leftbar_infos">System</string>
    <string name="leftbar_updates">Updates</string>
    <string name="leftbar_install">Install</string>
    <string name="leftbar_settings">Settings</string>
    <string name="appsettingssort">Move</string>
    <string name="appsettings_settings">App Settings</string>
    <string name="language_settings">Language Settings</string>
    <string name="language_summary">Set language manually.</string>
    <string name="language_title">Language</string>
    <string name="update_checkfortitle">Checking for updates</string>
    <string name="update_checkfordesc">Check for latest release version.</string>
    <string name="update_checkformessage">Check for update.</string>
    <string name="update_foundnew">Found newer Version - Update Now!</string>
    <string name="update_foundnotnew">You have already the newest version!</string>
    <string name="power_reboot">Reboot</string>
    <string name="wifissidtitle">WiFi / WLAN Name (SSID)</string>
    <string name="layout_settings">Layout Settings</string>
    <string name="wallpaper_summary">Set a custom background image / wallpaper for FireStarter</string>
    <string name="wallpaper_title">Wallpaper / Background Image</string>
    <string name="remove_wallpaper">Remove Wallpaper</string>
    <string name="select_wallpaper">Select Wallpaper</string>
    <string name="power_sleep">Sleep</string>
    <string name="system_informative">System Information</string>
    <string name="system_settings">System Settings</string>
    <string name="system_sleeptime_edit_summary">Time of inactivity in minutes after which the device goes to sleep.</string>
    <string name="system_sleeptime_edit_title">Sleep Timeout</string>
    <string name="gotosleep_summary">ATTENTION: This feature has been removed from FireStarter! Long press home-button to find the option to go to sleep immediately.</string>
    <string name="gotosleep_title">Go to sleep</string>
    <string name="system_restart_summary">ATTENTION: If you click here, the device reboots immediately!</string>
    <string name="system_restart_title">Reboot</string>
    <string name="gotosleep_waitforsleep">Please wait, device goes to sleep in a few seconds..</string>
    <string name="gotosleep_waitforsleep_title">Going to sleep mode..</string>
    <string name="sleeptime_limit">Only values between %1$d and %2$d minutes are allowed!</string>
    <string name="gotosleep_cancel">Canceled go to sleep..</string>
    <string name="devicedetailstitle">Device Details</string>
    <string name="appicon_size_title">App Icon Size</string>
    <string name="appicon_size_summary">Size between 0 and 200 (in DPI) of the App-Icons on the main App-Drawer in DPI. Set to 0 for default.</string>
    <string name="importExport">Import / Export</string>
    <string name="importexport_export_summary">Export current FireStarter settings to ZIP-File.</string>
    <string name="importexport_export_title">Export</string>
    <string name="importexport_import_summary">Import FireStarter Settings from ZIP-File. Be sure to only import trusted ZIP-Files!</string>
    <string name="importexport_import_title">Import</string>
    <string name="deviceuptime">Uptime</string>
    <string name="uptimedesc">Device is up for %1$s (startup: %2$s)</string>
    <string name="clearpreviousinstance_desc">If this option is set, all previous instances of the app are cleared and the app is started fresh (nothing from the last activity is restored).</string>
    <string name="clearpreviousinstance_singleclick_title">Single Click App: Clear previous instances</string>
    <string name="clearpreviousinstance_doubleclick_title">Double Click App: Clear previous instances</string>
    <string name="background_observation_viaadb_title">Home-Detection via ADB</string>
    <string name="background_observation_viaadb_desc">Use ADB to detect home button clicks. This is more accurate but does only work with ADB running and correctly enabled (disable / enable in settings).</string>
    <string name="system_restart_summary_removed">ATTENTION: This feature has been removed from FireStarter hold \"Enter/Select\"-Button + \"Play\"-Button to restart FireTV.</string>
    <string name="open_adb_settings_title">Open ADB Settings</string>
    <string name="open_adb_settings_summary">This is a shortcut to open the ADB settings.</string>
    <string name="observation_via_adb_title">Observation via ADB</string>
    <string name="observation_via_adb_summary">You have choosen the home button observation via ADB.\n\nFor this option it is important, that ADB is enabled. If you are already on FireOS5 (Android v5.1), you have to make sure that no other device is connecting via ADB in parallel. If you want to use tools like adbFire, Amazon FireTV Utility App, Apps2Fire or similar, you should disable the ADB observation of FireStarter and disable/enable ADB before you try to connect.\n\nIf you want to use ADB observation of FireStarter again, make sure you disable/enable ADB before using it (Shortcut to ADB settings is below this Setting).</string>
    <string name="observation_without_adb_title">Observation without ADB</string>
    <string name="observation_without_adb_summary">You have choosen the new home button observation without ADB.\n\nThis observation of the home-button works only if you are on the original Amazon FireTV Home screen. This means if you are in any other App like Kodi, you have to click the home button once to get to the Amazon FireTV Home screen and then you can single or double click the home-button to perform the action desired.\n\nIn practice that means, you can also add one home button click if you are in another app. If you are for example in Kodi, you can do a double-click to the home-button to perform the single click operation and according to this you can do a triple click to perform the double click action.\n\nSorry for this strange behaviour but due to technical limitations of Android, there is no other possibility without ADB at the moment.</string>
    <string name="fallback_to_nonadb_title">Fallback to Non-ADB Observation</string>
    <string name="fallback_to_nonadb_desc">If this option is set and the ADB observation fails for three times, the home button observation is automatically changed to Non-ADB observation.</string>
    <string name="adb_fail_auto_observation_change">Change to non-ADB Observation\n\nThe observation with ADB failed more than 3 times. The home-button observation have been automatically changed to non-ADB observation. You can change this behaviour in the FireStarter settings.</string>
    <string name="hideleftbarinappoverview_title">Hide left bar in app drawer</string>
    <string name="hideleftbarinappoverview_desc">Left selection bar is hidden when on the main page (App Drawer)</string>
    <string name="showbackgroundforappnames_title">Background for App Names (App Drawer)</string>
    <string name="showbackgroundforappnames_desc">Shows a background for app names in the app drawer. This helps to read app names, if a wallpaper is used.</string>
    <string name="feature_only_availabe_fireos3_and_older">This feature is only available in FireOS 3 and older..</string>
    <string name="update_settings">Update Settings</string>
    <string name="kodi_update_policy_desc">Decide which Kodi updates you want to install. If you choose \"Nightly\", the check for newer version gets useless (install of current version is then always possible).\nATTENTION: To downgrade you always have to uninstall Kodi manually first!</string>
    <string name="kodi_update_policy_title">Kodi Update Policy</string>
    <string name="not_installed">not installed</string>
</resources>
