<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="50dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_currentversion"
        android:textSize="@dimen/textsizeinfotitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notfound"
        android:textSize="@dimen/textsizeinfo"
        android:id="@+id/currentVersion"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/infodividerheight"
        android:layout_marginTop="@dimen/infodivicermargintopbottom"
        android:layout_marginBottom="@dimen/infodivicermargintopbottom"
        android:background="@color/whitedivider"
        android:focusable="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/serverVersion"
        android:textSize="@dimen/textsizeinfotitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_hitcheckfor"
        android:textSize="@dimen/textsizeinfo"
        android:id="@+id/latestVersion"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/infodividerheight"
        android:layout_marginTop="@dimen/infodivicermargintopbottom"
        android:layout_marginBottom="@dimen/infodivicermargintopbottom"
        android:background="@color/whitedivider"
        android:focusable="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update_checkfor"
            android:id="@+id/buttonCheckForUpdate"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonUpdate"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:text="@string/about_firestarter"
        android:textSize="@dimen/textsizeinfo" />

</LinearLayout>