<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="50dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/iptitle"
        android:textSize="@dimen/textsizeinfotitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notfound"
        android:textSize="@dimen/textsizeinfo"
        android:id="@+id/ipAddress"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/infodividerheight"
        android:layout_marginTop="@dimen/infodivicermargintopbottom"
        android:layout_marginBottom="@dimen/infodivicermargintopbottom"
        android:background="@color/whitedivider"
        android:focusable="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hostnametitle"
        android:textSize="@dimen/textsizeinfotitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notfound"
        android:textSize="@dimen/textsizeinfo"
        android:id="@+id/hostname"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/infodividerheight"
        android:layout_marginTop="@dimen/infodivicermargintopbottom"
        android:layout_marginBottom="@dimen/infodivicermargintopbottom"
        android:background="@color/whitedivider"
        android:focusable="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/firestarterversiontitle"
        android:textSize="@dimen/textsizeinfotitle"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notfound"
        android:textSize="@dimen/textsizeinfo"
        android:id="@+id/firestarterversion"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/infodividerheight"
        android:layout_marginTop="@dimen/infodivicermargintopbottom"
        android:layout_marginBottom="@dimen/infodivicermargintopbottom"
        android:background="@color/whitedivider"
        android:focusable="false" />

</LinearLayout>