<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dp">

    <LinearLayout
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_weight="1"
                  android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notfound"
            android:textSize="@dimen/textsizeinfotitle"
            android:textColor="#FFFFFF"
            android:id="@+id/title"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notfound"
            android:textSize="@dimen/textsizeinfo"
            android:id="@+id/currentVersion"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/notfound"
            android:textSize="@dimen/textsizeinfo"
            android:id="@+id/latestVersion"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update_checkfor"
            android:id="@+id/buttonCheckForUpdate"/>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/buttonUpdate"/>

    </LinearLayout>

</LinearLayout>