<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/semitransparentbackground_light">

    <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:orientation="vertical"
                  android:padding="20dp"
                  android:background="@drawable/appsettingsbackground">



        <TextView
            android:id="@+id/title"
            android:text="Settings:"
            android:textStyle="bold"
            android:textSize="@dimen/abc_text_size_large_material"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="wrap_content"
                      android:layout_height="@dimen/appsettingboxsize"
                      android:layout_gravity="center"
                      android:orientation="horizontal" >

            <ImageView
                android:id="@+id/appIcon"
                android:scaleType="fitCenter"
                android:src="@android:drawable/ic_menu_gallery"
                android:layout_width="@dimen/appsettingboxsize"
                android:layout_height="@dimen/appsettingboxsize"
                android:padding="15dp"
                android:focusable="false"
                android:contentDescription="@string/AppName"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/appsettingsoptionpadding"
                android:layout_marginRight="@dimen/appsettingsoptionpadding"
                android:background="@color/whitedivider"
                android:focusable="false" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/appSort"
                          android:clickable="true"
                          android:focusable="true"
                          android:background="@drawable/appsettingsselector"
                          android:layout_width="@dimen/appsettingboxsize_small"
                          android:layout_height="@dimen/appsettingboxsize_small"
                          android:layout_gravity="center"
                          android:padding="10dp"
                          android:orientation="vertical">

                <ImageView
                    android:scaleType="fitCenter"
                    android:src="@mipmap/app_sort"
                    android:layout_width="@dimen/settingsiconsize"
                    android:layout_height="@dimen/settingsiconsize"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:contentDescription="@string/AppName"/>

                <TextView
                    android:text="@string/appsettingssort"
                    android:gravity="center|bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/appsettingsoptionpadding"
                android:background="@color/whitedivider"
                android:focusable="false" />

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:id="@+id/appSettings"
                          android:clickable="true"
                          android:focusable="true"
                          android:selectable="true"
                          android:background="@drawable/appsettingsselector"
                          android:layout_width="@dimen/appsettingboxsize_small"
                          android:layout_height="@dimen/appsettingboxsize_small"
                          android:layout_gravity="center"
                          android:padding="10dp"
                          android:orientation="vertical">

                <ImageView
                    android:scaleType="fitCenter"
                    android:src="@mipmap/app_settings"
                    android:layout_width="@dimen/settingsiconsize"
                    android:layout_height="@dimen/settingsiconsize"
                    android:layout_gravity="center"
                    android:focusable="false"
                    android:contentDescription="@string/AppName"/>

                <TextView
                    android:text="@string/appsettings_settings"
                    android:gravity="center|bottom"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="@dimen/appsettingsoptionpadding"
                android:layout_marginRight="@dimen/appsettingsoptionpadding"
                android:background="@color/whitedivider"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>